--- a/ArtGalleryDrow/app/src/main/res/layout/content_buyer.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/content_buyer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.lukas.artgallerydrow.BuyerActivity"
+    tools:context="com.example.lukas.artgallerydrow.controller.BuyerActivity"
     tools:showIn="@layout/app_bar_buyer">
 
 </android.support.constraint.ConstraintLayout>
