added seller input image, recyclerView and other fixes

--- a/ArtGalleryDrow/app/src/main/res/menu/navigation_seller.xml
+++ b/ArtGalleryDrow/app/src/main/res/menu/navigation_seller.xml
@@ -9,6 +9,9 @@
         <item android:id="@+id/nav_itemsForSale"
             android:title="Items for sale"/>
 
+        <item android:id="@+id/nav_addItem"
+            android:title="AddItem"/>
+
     </group>
 
 </menu>
