--- a/ArtGalleryDrow/app/src/main/res/layout/activity_seller.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_seller.xml
@@ -11,13 +11,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Tuk shte e recyclerView-to"-->
+            <!--android:textSize="28dp"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:textAlignment="center"/>-->
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Tuk shte e recyclerView-to"
-            android:textSize="28dp"
-            android:layout_gravity="center_vertical"
-            android:textAlignment="center"/>
+            android:layout_height="match_parent"
+            android:id="@+id/testimage1"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:scrollbars="vertical" />
 
     </LinearLayout>
 
