--- a/ArtGalleryDrow/app/src/main/res/layout/activity_temp_test.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_temp_test.xml
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:text="empty"
+        android:id="@+id/itemsAll"
+        android:text="AllItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
