--- a/ArtGalleryDrow/app/src/main/res/layout/activity_login.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     android:fillViewport="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -62,7 +63,9 @@
             android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="Login" />
+            android:background="@color/colorBright"
+            android:text="Login"
+            android:textColor="@color/colorDark" />
 
         <TextView
             android:layout_width="wrap_content"
