--- a/ArtGalleryDrow/app/src/main/res/layout/custom_row_recycler.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/custom_row_recycler.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:background="@android:color/holo_green_light"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginTop="16dp"
     android:layout_height="100dp">
 
 
         <ImageView
             android:id="@+id/img_row"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:layout_weight="1"
             android:padding="5dp"/>
 
         <LinearLayout
