--- a/ArtGalleryDrow/app/src/main/res/values/colors.xml
+++ b/ArtGalleryDrow/app/src/main/res/values/colors.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C00C02</color>
-    <color name="colorPrimaryDark">#386744</color>
+    <color name="colorPrimary">#F05C24</color>
+    <color name="colorPrimaryDark">#C00C02</color>
     <color name="colorAccent">#FEE79D</color>
+
 
     <color name="colorMiddle">#DE9440</color>
     <color name="colorBright">#FDD460</color>
-    <color name="colorDark">#F05C24</color>
-
-
-
-
+    <color name="colorDark">#386744</color>
 </resources>
