Some style changes

--- a/ArtGalleryDrow/app/src/main/res/values/styles.xml
+++ b/ArtGalleryDrow/app/src/main/res/values/styles.xml
@@ -6,6 +6,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="colorControlNormal">@color/colorMiddle</item>
+        <item name="colorControlActivated">@color/colorDark</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
+
+
+
+
     </style>
 
     <style name="AppTheme.NoActionBar">
