--- a/ArtGalleryDrow/app/src/main/res/layout/activity_login.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
             android:layout_weight="1"
             android:hint="E-mail"
             android:maxLength="40"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/colorDark" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/txtLoginPassword"
@@ -50,7 +51,8 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:maxLength="20"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:textColor="@color/colorDark" />
 
         </android.support.design.widget.TextInputLayout>
 
