--- a/ArtGalleryDrow/app/src/main/res/layout/custom_row_recycler.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/custom_row_recycler.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:background="@android:color/holo_green_light"
+    android:background="@color/colorBright"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginTop="16dp"
@@ -36,14 +36,14 @@
             <TextView
                 android:hint="description"
                 android:id="@+id/desc_row"
-                android:textSize="10sp"
+                android:textSize="13sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 />
 
             <TextView
-                android:hint="price"
+                android:text="Price:"
                 android:id="@+id/desc_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
