--- a/ArtGalleryDrow/app/src/main/res/layout/nav_header_seller.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/nav_header_seller.xml
@@ -11,9 +11,10 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imgHeaderSeller"
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@mipmap/face"
             android:layout_weight="2"/>
 
         <LinearLayout
