--- a/ArtGalleryDrow/app/src/main/res/layout/activity_user_profile.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_user_profile.xml
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@color/colorBright"
         android:text="upload image"/>
 
     <EditText
@@ -77,6 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorBright"
             android:layout_weight="1"
             android:text="cancel" />
 
@@ -85,6 +88,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"
+            android:background="@color/colorBright"
             android:layout_weight="1"
             android:text="update" />
 
