--- a/ArtGalleryDrow/app/src/main/res/layout/activity_upload_preview.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_upload_preview.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     android:background="@color/colorAccent"
     tools:context="com.example.lukas.artgallerydrow.controller.UploadPreview">
 
@@ -76,13 +78,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
-        android:padding="5dp">
+        android:padding="10dp">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/btnCancelSave"
             android:text="Cancel"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorBright"
             android:layout_weight="1"/>
 
         <Button
@@ -90,6 +94,8 @@
             android:layout_height="match_parent"
             android:id="@+id/btnSaveUpload"
             android:text="upload"
+            android:layout_marginLeft="5dp"
+            android:background="@color/colorBright"
             android:layout_weight="1"/>
 
     </LinearLayout>
