--- a/ArtGalleryDrow/app/src/main/res/layout/custom_row_recycler.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/custom_row_recycler.xml
@@ -42,16 +42,43 @@
                 android:layout_weight="5"
                 />
 
-            <TextView
-                android:text="Price:"
-                android:id="@+id/desc_price"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="textEnd"
-                android:textSize="15sp"
-                android:textStyle="italic"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1">
+
+                <TextView
+                    android:text="Price:"
+                    android:id="@+id/type_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textStyle="italic"
+                    android:layout_weight="1"
+                    />
+
+                <TextView
+                    android:text="Price:"
+                    android:id="@+id/subtype_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textStyle="italic"
+                    android:layout_weight="1"
+                    />
+
+                <TextView
+                    android:text="Price:"
+                    android:id="@+id/desc_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textStyle="italic"
+                    android:layout_weight="1"
+                    />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
