--- a/ArtGalleryDrow/app/src/main/res/layout/content_buyer.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/content_buyer.xml
@@ -10,12 +10,22 @@
     tools:showIn="@layout/app_bar_buyer">
 
 
-    <TextView
-        android:id="@+id/temp_test"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:scrollbars="vertical" />
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/temp_test"-->
+    <!--android:layout_width="368dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="20sp"-->
+    <!--tools:layout_editor_absoluteY="0dp"-->
+    <!--tools:layout_editor_absoluteX="8dp" />-->
 
 </LinearLayout>
