--- a/ArtGalleryDrow/app/src/main/res/layout/item_custom_row.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/item_custom_row.xml
@@ -2,6 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginTop="16dp"
     android:background="@color/colorBright">
 
 
