--- a/ArtGalleryDrow/app/src/main/res/menu/buyer.xml
+++ b/ArtGalleryDrow/app/src/main/res/menu/buyer.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="Edit Profile"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/buyer_logout"
+        android:icon="@drawable/ic_menu_manage"
+        android:orderInCategory="100"
+        android:title="Logout"
+        app:showAsAction="never" />
 </menu>
