--- a/ArtGalleryDrow/app/src/main/res/values/styles.xml
+++ b/ArtGalleryDrow/app/src/main/res/values/styles.xml
@@ -17,11 +17,15 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
+
+        <item name="windowActionBar">false</item>//fffdfdfdffdf
         <item name="windowNoTitle">true</item>
+        <!--<item name="android:itemBackground">@color/colorAccent</item>-->
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--<item name="android:background">@color/colorAccent</item>-->
+    </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
