--- a/ArtGalleryDrow/app/src/main/res/layout/item_custom_row.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/item_custom_row.xml
@@ -1,21 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginTop="16dp"
-    android:background="@color/colorBright">
+    android:layout_height="140dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
+    android:background="@color/colorBright"
+    android:padding="5dp">
 
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginRight="5dp" />
 
-    <TextView
-        android:id="@+id/item_title_text_view"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/item_title_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Title"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/item_description_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:text="Description rfv fsdfv vf vfvf v vf v fbv fb d sedds sf f f dfdsfdfsdg gg rgr grgreg rdg rg rggthg grgf ref refregf erfre frfr frefrfr frfrf rfrfr frf rf rfrfrf rfref refref refe g tg6 y66hg hgr gtg t fhj gffs nshj  g dyd dyg d df gf dsgfy fsdg fdf dfg dfdgs fdys fyd fdg fsd fdsy fgysgfy dfydf f dyfg dgdsy gfdyfg dsyfdsg yfgds gdsyf dsgfy dsgfy dghgthg thtrhtr htrht hth tr"
+            android:textColor="@color/colorDark"
+            android:textSize="10sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/item_price_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="Price:"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/item_btn_buy"
+                style="@style/AppTheme"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@color/colorPrimary"
+                android:text="Buy!"
+                android:textAllCaps="false"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
