--- a/ArtGalleryDrow/app/src/main/res/menu/navigation_seller.xml
+++ b/ArtGalleryDrow/app/src/main/res/menu/navigation_seller.xml
@@ -17,6 +17,9 @@
             <item android:id="@+id/nav_profile_settings"
                 android:title="     Profile"/>
 
+            <item android:id="@+id/nav_logout"
+                android:title="     Logout"/>
+
         </group>
     </menu>
 </item>
