--- a/ArtGalleryDrow/app/src/main/res/layout/activity_login.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
@@ -10,25 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="16dp"
         tools:context="com.example.plame_000.gallery.LoginActivity">
 
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:srcCompat="@mipmap/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:layout_weight="2"
-            android:text="Wellcome"
-            android:textSize="39dp" />
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:text='Art Gallery\n"Colorissimo"'
+            android:textAlignment="center"
+            android:textColor="@color/colorDark"
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/txtLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:hint="E-mail"
             android:maxLength="40"
@@ -44,8 +55,8 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:hint="Password"
@@ -62,12 +73,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
+            android:layout_marginRight="45dp"
             android:background="@color/colorBright"
+            android:elevation="1dp"
             android:text="Login"
-            android:textColor="@color/colorDark" />
+            android:textAllCaps="false"
+            android:textColor="@color/colorDark"
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,24 +98,33 @@
             android:layout_weight="1"
             android:text="SignUp"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/testSelect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:text="Test" />
+            android:layout_height="60dp"
+            android:layout_margin="16dp"
+            app:srcCompat="@drawable/logo_orange" />
 
 
-        </LinearLayout>
+        <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="2"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--&lt;!&ndash;<Button&ndash;&gt;-->
+        <!--&lt;!&ndash;android:id="@+id/testSelect"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_marginTop="10dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:text="Test" />&ndash;&gt;-->
+
+
+        <!--</LinearLayout>-->
 
     </LinearLayout>
 
