--- a/ArtGalleryDrow/app/src/main/res/layout/activity_user_profile.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_user_profile.xml
@@ -4,96 +4,115 @@
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
     android:fillViewport="true">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.lukas.artgallerydrow.controller.UserProfileActivity">
 
-    <ImageView
-        android:id="@+id/imgProfileChange"
-        android:layout_marginBottom="10dp"
-        android:src="@mipmap/emptyprofile"
-        android:layout_marginTop="10dp"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:adjustViewBounds="true"
-        android:layout_height="150dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+        tools:context="com.example.lukas.artgallerydrow.controller.UserProfileActivity">
 
-    <Button
-        android:id="@+id/btnProfileImgUpload"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/colorBright"
-        android:text="upload image"/>
-
-    <EditText
-        android:id="@+id/txtUsernameChange"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="change username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/txtAddressChange"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="change address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/txtPassChange"
-        android:inputType="textPassword"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="new password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/txtPassConfirmChange"
-        android:inputType="textPassword"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="confirm password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/imgProfileChange"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/emptyprofile" />
 
         <Button
-            android:id="@+id/btnProfileCancel"
+            android:id="@+id/btnProfileImgUpload"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/colorBright"
+            android:text="Upload Image"
+            android:textAllCaps="false"
+            android:textColor="@color/colorDark"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/txtUsernameChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorBright"
-            android:layout_weight="1"
-            android:text="cancel" />
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:maxLength="40"
+            android:maxLines="1"
+            android:hint="change username" />
 
-        <Button
-            android:id="@+id/btnProfileUpdate"
+        <EditText
+            android:id="@+id/txtAddressChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="5dp"
-            android:background="@color/colorBright"
-            android:layout_weight="1"
-            android:text="update" />
+            android:maxLength="40"
+            android:maxLines="1"
+            android:layout_marginTop="2dp"
+            android:hint="change address" />
+
+        <EditText
+            android:id="@+id/txtPassChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp"
+            android:maxLength="20"
+            android:maxLines="1"
+            android:hint="new password"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/txtPassConfirmChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp"
+            android:maxLength="20"
+            android:maxLines="1"
+            android:hint="confirm password"
+            android:inputType="textPassword" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnProfileCancel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/colorBright"
+                android:text="Cancel"
+                android:textAllCaps="false"
+                android:textColor="@color/colorDark"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/btnProfileUpdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@color/colorBright"
+                android:text="Update"
+                android:textAllCaps="false"
+                android:textColor="@color/colorDark"
+                android:textSize="18sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
 </ScrollView>
