full code refactor

--- a/ArtGalleryDrow/app/src/main/res/layout/activity_upload_preview.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/activity_upload_preview.xml
@@ -12,7 +12,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@color/colorAccent"
-    tools:context="com.example.lukas.artgallerydrow.controller.UploadPreview">
+    tools:context="com.example.lukas.artgallerydrow.controller.Controller.UploadPreview">
 
     <EditText
         android:layout_width="match_parent"
