--- a/ArtGalleryDrow/app/src/main/res/layout/app_bar_buyer.xml
+++ b/ArtGalleryDrow/app/src/main/res/layout/app_bar_buyer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lukas.artgallerydrow.controller.BuyerActivity">
+    tools:context="com.example.lukas.artgallerydrow.controller.Controller.BuyerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
